--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
     "react-image": "^4.0.3",
+    "request": "^2.88.2",
     "xstate": "^4.20.0"
   },
   "devDependencies": {
