--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
   },
   "dependencies": {
     "@xstate/react": "^1.3.4",
+    "bootstrap": "^5.0.2",
     "react": "^17.0.0",
+    "react-bootstrap": "^2.0.0-beta.4",
     "react-dom": "^17.0.0",
     "react-image": "^4.0.3",
     "request": "^2.88.2",
